# chess

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  build_web.sh  chess  docker-compose.yml  netlify.toml  package.json  test_compile.cpp  ultra_realistic_history_fixed.sh  vercel.json
.github/workflows/: ci-cd.yml
docker/: nginx.conf
docs/: ADVANCED_ALGORITHMS.md
include/ai/: advanced_ai.h  ai_factory.h
include/board/: chessboard.h
include/game/: game.h
include/observers/: graphicalobserver.h  observer.h  textobserver.h
include/pieces/: bishop.h  knight.h  queen.h  rook.h
include/web/: web_interface.h
src/: main.cc
src/ai/: advanced_ai.cpp  ai_factory.cpp
src/board/: chessboard.cpp  chessboard.h
src/game/: game.cpp  game.h
src/observers/: graphicalobserver.cpp  textobserver.cpp
src/pieces/: bishop.cpp  king.cpp  king.h  knight.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  rook.cpp
src/players/: computer.cpp  computer.h  human.cpp  human.h  player.cpp  player.h
src/web/: web_interface.cpp
tests/: castleMate.in  castleMate.valgrind  check.in  check.valgrind  checkTest.in  checkTest.valgrind  checkmate.in  checkmate.valgrind  computerTakesUntilPawn.in  computerTakesUntilPawn.valgrind  computerhumanpawnmoves.in  computerhumanpawnmoves.valgrind  enpassant.in  enpassant.valgrind  enpassantMate.in  enpassantMate.valgrind  enpassantMateBlack.in  enpassantMateBlack.valgrind  gametest.in  gametest.valgrind  invalidQueenCastle.in  invalidQueenCastle.valgrind  invalidpawnonbackrank.in  invalidpawnonbackrank.valgrind  kingCastle.in  kingCastle.valgrind  lvl3Test.in  lvl3Test.valgrind  megaSetup.in  megaSetup.valgrind  pawnPromo.in  pawnPromo.valgrind  pawnPromotionSetup.valgrind  promoCheckmate.in  promoCheckmate.valgrind  queenCastle.in  queenCastle.valgrind  setupEmptyBoard_move.in  setupEmptyBoard_move.valgrind  setupTest.in  (+15 more)
web/: game.js  index.html  pre.js  styles.css
